# cld2

./: .gitignore  .travis.yml  README.md  cld.gemspec  cld2.gemspec
ext/cld/: CMakeLists.txt  extconf.rb  thunk.cc
ext/cld2/: extconf.rb
lib/: cld.rb  cld2.rb
lib/cld/: version.rb
lib/cld2/: version.rb
spec/: cld2_spec.rb  cld_spec.rb  spec_helper.rb
